--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5586593310:AAF2ivkuMj0sfOVCPNLU8YXVh92kUv4MvgI"
-GDRIVE_FOLDER_ID = "1YLrAPs6laJIhu9rs6wPWxZMvgjJwdHfY"
+GDRIVE_FOLDER_ID = "1_dqkawMBXGfrgwrP6VEaOoKz8LWuN-D8"
 OWNER_ID = "1073090495"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "5"
@@ -14,7 +14,7 @@ AUTHORIZED_CHATS = "-1001656298995"
 SUDO_USERS = "2130047422"
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://cloud.pain-mirror.workers.dev/0:/GdriveXbot"
+INDEX_URL = "https://cloud.pain-mirror.workers.dev/0:/GdriveXbot22"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = "False"
 CMD_INDEX = ""
