--- a/config.env
+++ b/config.env
@@ -9,7 +9,7 @@ IS_TEAM_DRIVE = "True"
 TELEGRAM_API = "7715750"
 TELEGRAM_HASH = "4ca872dae360c9438a8e8deaed71c279"
 # OPTIONAL CONFIG
-DATABASE_URL = "mongodb+srv://pirido90:<cufN2ev7Xa8TzgJ6>@cluster0.e5ggowy.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = ""
 AUTHORIZED_CHATS = "-1001656298995"
 SUDO_USERS = "2130047422"
 IGNORE_PENDING_REQUESTS = "True"
