--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5586593310:AAF2ivkuMj0sfOVCPNLU8YXVh92kUv4MvgI"
-GDRIVE_FOLDER_ID = "1xiZSa_tlY-XXIt_zKn2zFYqJyYZgHs-_"
+GDRIVE_ID = "1xiZSa_tlY-XXIt_zKn2zFYqJyYZgHs-_"
 OWNER_ID = "1073090495"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "5"
@@ -14,7 +14,7 @@ AUTHORIZED_CHATS = "-1001656298995"
 SUDO_USERS = "2130047422"
 IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://cloud.pain-mirror.workers.dev/0:/GdriveXbot"
+INDEX_URL = "https://cloud.pain-mirror.workers.dev/0:/Mirror/"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = "False"
 CMD_INDEX = ""
@@ -49,7 +49,7 @@ NETRC_URL = "https://gist.githubusercontent.com/reno090/92e6f9f93ed2c66eb41fd760
 # Mega
 MEGA_API_KEY = "LzgBhC7S"
 MEGA_EMAIL_ID = "mavokkk@mail.ru"
-MEGA_PASSWORD = "p4in1w4n"
+MEGA_PASSWORD = "p4in1w4n2"
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
